examples/bad/wrong_arg.mko
fn takes_int(n: int) -> int {
    return n
}

fn main() {
    print_int(takes_int("x"))
}
